# routes/achievement.js
@@ -2,16 +2,16 @@
 const express = require('express');
 const router = express.Router();
 
-const achieveController = require('../controllers/achievements');
+const achieveController = require('../controllers/achievement');
 const validation = require('../middleware/validate');
 
 router.get('/', achieveController.getAll);
 
 router.get('/:id', achieveController.getAchievement);
 
-router.post('/',validation.saveAchievement, achieveController.createAchievement);
+router.post('/',validation.validateAchievement, achieveController.createAchievement);
 
-router.put('/:id',validation.saveAchievement, achieveController.updateAchievement);
+router.put('/:id',validation.validateAchievement, achieveController.updateAchievement);
 
 router.delete('/:id', achieveController.deleteAchievement);
 
