# routes/workout.js
@@ -2,16 +2,16 @@
 const express = require('express');
 const router = express.Router();
 
-const workController = require('../controllers/workouts');
+const workController = require('../controllers/workout');
 const validation = require('../middleware/validate');
 
 router.get('/', workController.getAll);
 
 router.get('/:id', workController.getWorkout);
 
-router.post('/',validation.saveWorkout, workController.createWorkout);
+router.post('/',validation.validateWorkout, workController.createWorkout);
 
-router.put('/:id',validation.saveWorkout, workController.updateWorkout);
+router.put('/:id',validation.validateWorkout, workController.updateWorkout);
 
 router.delete('/:id', workController.deleteWorkout);
 
